# franka_test

./: CMakeLists.txt  parameters.json  params.json
include/: franka_controller.h  motion_generator.h  robot_logger.h  robot_manager.h
include/communication/: central_communication_hub.h
include/control/: cartesian_motion_generator.h  franka_controller.h  robot_manager.h
include/utils/: logger.h  state_serializer.h
src/: franka_controller.cpp  main.cpp  motion_generator.cpp  robot_logger.cpp  robot_manager.cpp
src/communication/: central_communication_hub.cpp
src/control/: cartesian_motion_generator.cpp  franka_controller.cpp  robot_manager.cpp
src/utils/: logger.cpp  state_serializer.cpp
